# Sphinx-UIBCDF-theme

./: README.md  pyproject.toml
devtools/: requirements.yaml
devtools/conda-build/: meta.yaml
devtools/conda-envs/: build_env.yaml  development_env.yaml  docs_env.yaml  setup_env.yaml  test_env.yaml
src/sphinx_uibcdf_them/: __init__.py
